# DevOpsLaba3

./: Dockerfile  Func.cpp  Func.h  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  cos_func  cos_func_test  deb.deb  http_server  http_server.cpp  main.cpp  scriptA.sh  scriptB.sh  test.cpp  testTest.cpp  test_http_server
.deps/: Func.Po  test.Po  testTest.Po
.github/workflows/: a.yml  docker.yml
autom4te.cache/: output.0  output.2  requests  traces.2
deb/DEBIAN/: control
